- Allow class (not just instance) to be passed to pixel_selection (#250)
- Add Binder link/badge to README (#254)
- Add mkdocs-jupyter to show notebooks in website (#253)
- Remove deprecated functions (#247)
- Export modules from top-level package (#246)
- Allow overwriting colormap with force=True (#249)
- Pin black version (#251)
- Add contributing.md (#242)
- Add mkdocs config (#240)

2.0b8 (2020-08-24)
------------------
- raise specific `PointOutsideBounds` in rio_tiler.reader.point (#236)

2.0b7 (2020-08-21)
------------------
- allow setting default kwargs in COGReader __init__ (#227)
- allow `vrt_options` in COGReader.point
- add `rio_tiler.io.base.MultiBaseReader` class (#225)
- refactor `rio_tiler.io.stac.STACReader` to use MultiBaseReader (#225)
- add `rio_tiler.task` submodule to share tools for handling rio-tiler's future tasks.
- fix regex parsing for rio-tiler expression
- add warnings when assets/indexes is passed with expression option (#233)

Breaking Changes:
- replace dataclass wiht attr to support more flexible class definition (see #225)

2.0b6 (2020-08-04)
------------------
- add `utils.create_cutline` helper (#218)
- remove any mutable default argument

**depreciation**
- `warp_vrt_option` is replaced by `vrt_options` in rio_tiler.reader.part (#221)

2.0b5 (2020-07-31)
------------------
- add more verbosity to mosaic error (#214)

Breaking Changes:
- `rio_tiler.mosaic.reader.mosaic_reader` return `((tile, mask), assets_used)`
- `COGReader.info` is now a method instead of a property to align with other reader (#211)

2.0b4 (2020-07-30)
------------------
- add rio_tiler.io.base.BaseReader abstract class for COGReader and STACReader to inherit from
- STACReader raises `InvalidAssetName` for invalid asset name or `MissingAssets` when no assets is passed (#208)
- update rio_tiler.mosaic.reader.mosaic_reader to not use threadPool if threads <= 1 (#207)

Breaking Changes:
- Reader.spatial_info is a property (#203)