@@ -10,6 +10,7 @@
 - Pin black version (#251)
 - Add contributing.md (#242)
 - Add mkdocs config (#240)
+- Add `NPY` support in `rio_tiler.utils.render` to save tile in numpy binary format (#256)
 
 2.0b8 (2020-08-24)
 ------------------
